# Filimbre

./: .gitignore  CMakeLists.txt  Filimbre  README.md  pene  prueba.txt
include/: documento.h  interfaz.h  linea.h  listas.h  proyecto  proyecto.cpp  utils.h
src/: documento.cpp  interfaz.cpp  linea.cpp  listas.cpp  main.cpp  utils.cpp
